adding hamburger menu

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,10 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cv-hemsida</title>
 </head>
-    <div class="top-bar">
-        hej
-    </div>
+
 <body>
+    <script src="app.js"></script>
     
+    <div class="top-bar">
+        <h1>Arvid CV hemsida</h1>
+        <button class="menu-button" type="button" onclick="toggleMenu()">menu</button>
+    </div>
+    <div id="menu">
+        <a href="#">om mig</a>
+        <a href="#">kurser</a>
+        <a href="#">intressen</a>
+    </div>
 </body>
 </html>
