--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,14 +12,20 @@
     <script src="app.js"></script>
     
     <div class="top-bar">
-        <h1>Arvid CV hemsida</h1>
+        <h1>
+            <a class="heading" href="index.html">CV hemsida</a> 
+        </h1>
         <button class="menu-button" type="button" onclick="toggleMenu()">menu</button>
+    </div>
+
+    <div class="home-body">
+        hej
     </div>
     
     <div id="menu">
-        <a href="#">om mig</a>
-        <a href="#">kurser</a>
-        <a href="#">intressen</a>
+        <a href="me.html">om mig</a>
+        <a href="courses.html">kurser</a>
+        <a href="interests.html">intressen</a>
     </div>
 
 </body>
