adding courses divs

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="home-body">
-        hej
+        <h3 id="home-text">Hej! Mitt namn är Arvid Nilsson och <br>jag är student på NTI Kronhus</h3>
     </div>
     
     <div id="menu">
