--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -24,5 +24,11 @@
         <a href="interests.html">intressen</a>
     </div>
 
+    <div class="courses-body">
+        <div class="courses-year">
+            <h4>Årskurs 1</h4>
+        </div>
+    </div>
+
 </body>
 </html>
