adding courses and points

--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -24,9 +24,170 @@
         <a href="interests.html">intressen</a>
     </div>
 
+    <!-- år 1 -->
     <div class="courses-body">
         <div class="courses-year">
             <h4>Årskurs 1</h4>
+            <table>
+                <tr>
+                    <td>Engelska 5</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Idrott och hälsa 1</td>
+                    <td class="courses-points">50</td>
+                </tr>
+                <tr>
+                    <td>Historia 1a1</td>
+                    <td class="courses-points">50</td>
+                </tr>
+                <tr>
+                    <td>Mattematik 1c</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Mattematik 2c</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Religion 1</td>
+                    <td class="courses-points">50</td>
+                </tr>
+                <tr>
+                    <td>Sammhällskunskap 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Svenska 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Teknik 1</td>
+                    <td class="courses-points">150</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="courses-points">Total:</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="courses-points">800</td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- år 2 -->
+        <div class="courses-year">
+            <h4>Årskurs 1</h4>
+            <table>
+                <tr>
+                    <td>Dator och nätverksteknik</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Engelska 6</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Entreprenörkskap</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Fysik 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Idrott och hälsa 1</td>
+                    <td class="courses-points">50</td>
+                </tr>
+                <tr>
+                    <td>Mattematik 3c</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Mattematik 4</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Programmering 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Svenska 2</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Webbutveckling 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="courses-points">Total:</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="courses-points">950</td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- år 3 -->
+        <div class="courses-year">
+            <h4>Årskurs 1</h4>
+            <table>
+                <tr>
+                    <td>Engelska 7</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Gymnasiearbete</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Individuelt val</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Kemi 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Mattematik specialicering</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Mattematik 5</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Fysik 2</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Programmering 2</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Svenska 3</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Teknik collage kurs 1</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td>Teknik collage kurs 2</td>
+                    <td class="courses-points">100</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="courses-points">Total:</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="courses-points">1000</td>
+                </tr>
+            </table>
         </div>
     </div>
 
