--- a/HTML/me.html
+++ b/HTML/me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +22,11 @@
         <a href="me.html">om mig</a>
         <a href="courses.html">kurser</a>
         <a href="interests.html">intressen</a>
+    </div>
+
+    <div class="me-body">
+        <h2 id="me-heading">Om mig</h2>
+        <img src="../img/Map.png" alt="Picture not found" class="me-map">
     </div>
 
 </body>
