--- a/HTML/me.html
+++ b/HTML/me.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="app.js"></script>
+    <script src="../js/app.js"></script>
     
     <div class="top-bar">
         <h1>
@@ -26,7 +26,10 @@
 
     <div class="me-body">
         <h2 id="me-heading">Om mig</h2>
-        <img src="../img/Map.png" alt="Picture not found" class="me-map">
+        <div class="me-flexbox">
+            <img src="../img/Map.png" alt="Picture not found" class="me-map">
+            <p id="me-paragraph">Hej Jag är en studiemotiverad sjuttonåring som går på NTI kronhus. Jag bor och är uppväxt i Älvängen som ligger ungefär 3 mil norr om göteborg.  </p>
+        </div>    
     </div>
 
 </body>
