--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <script src="app.js"></script>
-    
+    <script src="../js/app.js"></script>
     <div class="top-bar">
         <h1>
             <a class="heading" href="index.html">CV hemsida</a> 
