--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,11 @@
         <h1>
             <a class="heading" href="index.html">CV hemsida</a> 
         </h1>
-        <button class="menu-button" type="button" onclick="toggleMenu()">menu</button>
+        <button class="menu-button" type="button" onclick="toggleMenu()">
+            <span class="bar1"></span>
+            <span class="bar2"></span>
+            <span class="bar1"></span>
+        </button>
     </div>
 
     <div class="home-body">
