--- a/HTML/interests.html
+++ b/HTML/interests.html
@@ -15,13 +15,22 @@
         <h1>
             <a class="heading" href="index.html">CV hemsida</a> 
         </h1>
-        <button class="menu-button" type="button" onclick="toggleMenu()">menu</button>
+        <button class="menu-button" type="button" onclick="toggleMenu()">
+            <span class="bar1"></span>
+            <span class="bar2"></span>
+            <span class="bar1"></span>
+        </button>
     </div>
     
     <div id="menu">
         <a href="me.html">om mig</a>
         <a href="courses.html">kurser</a>
         <a href="interests.html">intressen</a>
+    </div>
+
+    <div class="int-body">
+        <h2 id="int-heading">Snowboarding</h2>
+            <p id="int-paragraph">Hej Jag är en studiemotiverad sjuttonåring som går på NTI kronhus. Jag bor och är uppväxt i Älvängen som ligger ungefär 3 mil norr om göteborg.  </p>
     </div>
 
 </body>
