--- a/HTML/interests.html
+++ b/HTML/interests.html
@@ -26,6 +26,7 @@
         <a href="me.html">om mig</a>
         <a href="courses.html">kurser</a>
         <a href="interests.html">intressen</a>
+        <a href="contact.html">Kontakta mig</a>
     </div>
 
     <div class="int-body">
