adding instagram link and image

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,10 +20,6 @@
             <span class="bar1"></span>
         </button>
     </div>
-
-    <div class="home-body">
-        <h3 id="home-text">Hej! Mitt namn är Arvid Nilsson och <br>jag är student på NTI Kronhus</h3>
-    </div>
     
     <div id="menu">
         <a href="me.html">om mig</a>
@@ -32,5 +28,9 @@
         <a href="contact.html">Kontakta mig</a>
     </div>
 
+    <div class="home-body">
+        <h3 id="home-text">Hej! Mitt namn är Arvid Nilsson och <br>jag är student på NTI Kronhus</h3>
+    </div>
+    <a href="https://www.instagram.com/superarvid2_0/" target="_blank"><img src="../Img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
 </body>
 </html>
