--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,6 +31,7 @@
     <div class="home-body">
         <h3 id="home-text">Hej! Mitt namn är Arvid Nilsson och <br>jag är student på NTI Kronhus</h3>
     </div>
-    <a href="https://www.instagram.com/superarvid2_0/" target="_blank"><img src="../Img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
+    <a href="https://www.instagram.com/superarvid2_0/" target="_blankg"><img src="../Img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
 </body>
+
 </html>
