--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -35,9 +35,9 @@
             <input type="text", id="f-name", name="f-name"><br>
             <label for="l-name">Efternamn</label><br>
             <input type="text", id="l-name", name="l-name"><br>
-            <label for="email">email</label><br>
+            <label for="email">Email</label><br>
             <input type="text", id="email", name="emale"><br>
-            <label for="message" id="message-text">Medelande</label><br>
+            <label for="message" id="message-text">Meddelande</label><br>
             <textarea name="message" id="message" cols="30" rows="8"></textarea>
 
         </form>
