changing text in interest.html

--- a/HTML/interests.html
+++ b/HTML/interests.html
@@ -31,7 +31,7 @@
 
     <div class="int-body">
         <h2 id="int-heading">Snowboarding</h2>
-            <p id="int-paragraph">Hej Jag är en studiemotiverad sjuttonåring som går på NTI kronhus. Jag bor och är uppväxt i Älvängen som ligger ungefär 3 mil norr om göteborg.  </p>
+            <p id="int-paragraph">Mitt största fritidsintresse är snowboarding. Jag har åkt skidor hela mitt liv men bytte till snowboarding för tre säsonger sedan. </p>
     </div>
 
 </body>
