--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="../js/app.js"></script>
+    <script src="js/app.js"></script>
     <div class="top-bar">
         <h1>
             <a class="heading" href="index.html">CV hemsida</a> 
@@ -24,12 +24,12 @@
     <div class="home-body">
         <h3 id="home-text">Hej! Mitt namn är Arvid Nilsson och <br>jag är student på NTI Kronhus</h3>
     </div>
-    <a href="https://www.instagram.com/superarvid2_0/" target="_blankg"><img src="../Img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
+    <a href="https://www.instagram.com/superarvid2_0/" target="_blankg"><img src="Img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
     <div id="menu">
-        <a href="me.html">om mig</a>
-        <a href="courses.html">kurser</a>
-        <a href="interests.html">intressen</a>
-        <a href="contact.html">Kontakta mig</a>
+        <a href="HTML/me.html">om mig</a>
+        <a href="HTML/courses.html">kurser</a>
+        <a href="HTML/interests.html">intressen</a>
+        <a href="HTML/contact.html">Kontakta mig</a>
     </div>
 
 </body>
