--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -12,7 +12,7 @@
     <script src="../js/app.js"></script>
     <div class="top-bar">
         <h1>
-            <a class="heading" href="index.html">CV hemsida</a> 
+            <a class="heading" href="../index.html">CV hemsida</a> 
         </h1>
         <button class="menu-button" type="button" onclick="toggleMenu()">
             <span class="bar1"></span>
