--- a/HTML/interests.html
+++ b/HTML/interests.html
@@ -13,7 +13,7 @@
     
     <div class="top-bar">
         <h1>
-            <a class="heading" href="index.html">CV hemsida</a> 
+            <a class="heading" href="../index.html">CV hemsida</a> 
         </h1>
         <button class="menu-button" type="button" onclick="toggleMenu()">
             <span class="bar1"></span>
