--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="js/app.js"></script>
+    <script src="Js/app.js"></script>
     <div class="top-bar">
         <h1>
             <a class="heading" href="index.html">CV hemsida</a> 
