--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="Js/app.js"></script>
+    <script src="js/app.js"></script>
     <div class="top-bar">
         <h1>
             <a class="heading" href="index.html">CV hemsida</a> 
@@ -24,7 +24,7 @@
     <div class="home-body">
         <h3 id="home-text">Hej! Mitt namn är Arvid Nilsson och <br>jag är student på NTI Kronhus</h3>
     </div>
-    <a href="https://www.instagram.com/superarvid2_0/" target="_blankg"><img src="Img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
+    <a href="https://www.instagram.com/superarvid2_0/" target="_blankg"><img src="img/Instagram.png" alt="Instagram not loading" id="home-instagram"></a>
     <div id="menu">
         <a href="HTML/me.html">om mig</a>
         <a href="HTML/courses.html">kurser</a>
